--- a/partial/footer.ejs
+++ b/partial/footer.ejs
@@ -1,7 +1,6 @@
 <footer>
     <div class="panel-footer">
-        <span class="center-block text-center">IRT Tools, this is supposed to alleviate some stuff right?</span>
-        <span class="center-block text-center"><img src="https://static.axsops.com/ops/moss.gif"></span>
+        <span class="center-block text-center">educatelearing</span>
     </div>
 </footer>
 
